<resources>
    <string name="app_name">TareaActivity</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcion_contacto">Descripción del Contacto</string>
    <string name="siguiente">Siguiente</string>

    <string name="pnombreCompleto">nombreCompleto</string>
    <string name="pFechaNacimiento">fechaNacimiento</string>
    <string name="pTelefono">telefono</string>
    <string name="pEmail">email</string>
    <string name="pDescripcionContacto">descripcionContacto</string>
    <string name="datos_incompletos">Debe completar todos los campos requeridos</string>

    <string name="titulo_confirmar_contacto">Confirmar Contacto</string>
    <string name="label_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="label_telefono">Tél.</string>
    <string name="label_descripcion_contacto">Descripción:</string>
    <string name="editar_datos">Editar Datos</string>
</resources>